Blank index page text

--- a/dishes/templates/index.html
+++ b/dishes/templates/index.html
@@ -12,9 +12,9 @@
             </tr>
             <tr>
                 <td>
-                    <h1>Calorist — легкий калькулятор КБЖУ рецептов</h1>
+                    <h1>Calorist — очередной калькулятор КБЖУ рецептов</h1>
                     <p>
-                        Польза подсчета КБЖУ в блюдах: как это помогает контролировать питание и достигать целей
+                        Нейросеть тут что-то накалякала, а дальше будет видно. Польза подсчета КБЖУ в блюдах: как это помогает контролировать питание и достигать целей
                         Здоровое и сбалансированное питание - один из ключевых аспектов здорового образа жизни.
                         Правильное питание не только дает нам энергию и питательные вещества, но и помогает поддерживать оптимальный вес, 
                         укреплять иммунитет и предотвращать различные заболевания. Однако, чтобы достичь этих целей, 
