Sidebar to dropdown upgrade

--- a/dishes/templates/ingredients.html
+++ b/dishes/templates/ingredients.html
@@ -30,7 +30,7 @@
         </table>
     </div>
     {% if ingredients_page.has_previous or ingredients_page.has_next %}
-    <div class="pagination" style="margin-top: 10px; padding-left: 15px;">
+    <div class="pagination" style="margin-top: 10px; margin-left: auto; margin-right: auto;">
         <span class="step-links">
             {% if ingredients_page.has_previous %}
                 <a href="?page=1">&laquo;</a>
