--- a/dishes/static/global.css
+++ b/dishes/static/global.css
@@ -52,7 +52,7 @@ html, body {
 
 .search form {
     position: relative;
-    width: 450px;
+    width: 400px;
     margin: 0 auto;
   }
 .search input {
@@ -60,7 +60,6 @@ html, body {
   height: 42px;
   padding-left: 10px;
   border: 2px solid #b7bbbb;
-  border-radius: 15px;
   outline: none;
   background: #F9F0DA;
   color: #9E9C9C;
@@ -121,25 +120,47 @@ html, body {
     order: 0;
 }
 
-/* Sidebar */
-
-.sidebar {
-    background: #6CAEDD;
-    margin-left: 15px;
-    height: 165px;
-    flex: 0 0 auto;
-    width: 275px;
-    border-radius: 15px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+/* Dropdown Button */
+.dropbtn {
+    width: 100%;
+    background-color: #412985;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
 }
 
-.sidebar_table {
-    color: #ffffff;
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    & table {
-        width: 100%;
-        height: 150px;
-    }
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 100%;
 }
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    text-align: left;
+    width: 175px;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropbtn:hover {background-color: #84bbe2;}
