--- a/dishes/templates/index.html
+++ b/dishes/templates/index.html
@@ -6,9 +6,9 @@
 
 {% block main_content %}
     <div>
-        <table border="0" width="100%">
-            <tr style="text-align: center;">
-                <td><img src = '{% static "/index_article.png" %}' width="90%"></td>
+        <table border='0' width='100%'>
+            <tr style='text-align: center;'>
+                <td><img src = '{% static "/index_article.png" %}' width='90%'></td>
             </tr>
             <tr>
                 <td>
