--- a/dishes/templates/base.html
+++ b/dishes/templates/base.html
@@ -2,22 +2,22 @@
 {% load static %}
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=10">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width,minimum-scale=1,maximum-scale=10'>
     {% block title %}<title>Calorist</title>{% endblock %}
-    <link rel="icon" type="image/x-icon" href='{% static "/favicon.ico" %}'>
+    <link rel='icon' type='image/x-icon' href='{% static "/favicon.ico" %}'>
     <link rel='stylesheet' href='{% static "/global.css" %}'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css'
+        integrity='sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=='
+        crossorigin='anonymous' referrerpolicy='no-referrer'
     />
     {% block extra_links %}{% endblock %}
 </head>
 <body>
-    <div class="content-wrapper">
+    <div class='content-wrapper'>
         {% include 'header.html' %}
-        <div class="container">
-            <main class="content">
+        <div class='container'>
+            <main class='content'>
                 {% block main_content %}{% endblock %}
             </main>
         </div>
