--- a/dishes/templates/header.html
+++ b/dishes/templates/header.html
@@ -3,7 +3,9 @@
     <div class='header_menu'>
         <table border='0'>
             <tr>
-                <td width='17%' align='center'><a href = '{% url "index" %}'><img src='{% static "/logo.svg" %}' height='50px'></a></td>
+                <td width='17%' align='center'>
+                    <a href = '{% url "index" %}'><img src='{% static "/logo.svg" %}' height='50px'></a>
+                </td>
                 <td width='38%' align='center'>
                     <div class='search'>
                         <form method='get' action='{% url "search" %}'>
@@ -12,17 +14,33 @@
                         </form>
                     </div>
                 </td>                        
-                <td width='12%' align='center'><button class='dropbtn'><a style='text-decoration: none; color: white;' href= '{% url "ingredients_all" %}?page=1'>Ингредиенты</a></button></td>
+                <td width='12%' align='center'>
+                    <button class='dropbtn'>
+                        <a style='text-decoration: none; color: white;' href= '{% url "ingredients_all" %}?page=1'>Ингредиенты</a>
+                    </button>
+                </td>
                 <td width='1%'></td>
-                <td width='12%' align='center'><button class='dropbtn'>Рецепты</button></td>
+                <td width='12%' align='center'>
+                    <button class='dropbtn'>
+                        <a style='text-decoration: none; color: white;' href= '{% url "dishes_all" %}?page=1'>Рецепты</a>
+                    </button>
+                </td>
                 <td></td>
                 <td width='12%' align='right'>
                     <div class='dropdown'>
-                        <button class='dropbtn'><a style='text-decoration: none; color: white;' href='#1'>Username</a></button>
+                        {% if request.user.is_authenticated %}
+                        <button class='dropbtn'>
+                            <a style='text-decoration: none; color: white;' href='#1'>Профиль ({{ request.user.username }})</a>
+                        </button>
                         <div class='dropdown-content'>
-                            <a href='#3'>Мои ингредиенты</a>
-                            <a href='#4'>Мои рецепты</a>
-                            <a href='#5'>Выйти</a>
+                            <a href='{% url "user_ingredients" username=request.user.username %}'>Мои ингредиенты</a>
+                            <a href='{% url "user_dishes" username=request.user.username %}'>Мои рецепты</a>
+                            <a href='{% url "logout" %}'>Выйти из профиля</a>
+                        {% else %}
+                        <button class='dropbtn' style='background: #84bbe2;'>
+                            <a style='text-decoration: none; color: white;' href='{% url "login" %}?next={{request.path}}'>Войти</a>
+                        </button>
+                        {% endif %}
                     </div>
                   </div>
                 </td>
