--- a/dishes/templates/ingredients.html
+++ b/dishes/templates/ingredients.html
@@ -25,6 +25,8 @@
                     <td>{{ item.fats|floatformat }}</td>
                     <td>{{ item.carbonhydrates|floatformat }}</td>
                 </tr>
+                {% empty %}
+                <tr><td colspan='5' align='center'>Ингредиенты не найдены</tr>
                 {% endfor %}
             </tbody>
         </table>
