--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,20 +1,14 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-
+<div style='margin-left: auto; margin-right: auto; padding-top: 20px;'>
 {% if form.errors %}
-    <p>Введенные логин и пароль не соответствуют ни одному существующему профилю. Попробуйте еще раз.</p>
+    <p style='color: red'>
+        Введенные логин и пароль не соответствуют ни одному профилю. Попробуйте еще раз.
+    </p>
 {% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-        <p>У вас нет доступа к данной странице. Пожалуйста, войдите в другой аккаунт или перейдите на другую страницу.</p>
-    {% else %}
-        <p>Пожалуйста, войдите в свой профиль, чтобы получить доступ к данной странице.</p>
-    {% endif %}
-{% endif %}
-
-<form method="post" action='{% url "login" %}'>
+<form method='post' action='{% url "login" %}'>
     {% csrf_token %}
     <table>
         <tr>
@@ -26,8 +20,8 @@
             <td>{{ form.password }}</td>
         </tr>
     </table>
-    <input type='submit' value='login'>
+    <input type='submit' value='Войти'>
     <input type='hidden' name='next' value='{{ next }}'>
 </form>
-<p><a href=''>Забыли пароль?</a></p>
+</div>
 {% endblock %}
