--- a/dishes/static/dishes.css
+++ b/dishes/static/dishes.css
@@ -1,11 +1,12 @@
-.ingredients_table {
+.dishes_table {
     margin-left: auto;
     margin-right: auto;
     width: 990px;
     background-color: rgba(204, 201, 201, 0.5);
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     border-radius: 15px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    margin-bottom: 15px;
 
     & table {
         width: 100%;
@@ -31,11 +32,5 @@
 
     & th, td {
         padding: 15px;
-    }
-}
-
-.ingredients_table tr {
-    &:hover {
-        background-color: rgba(160, 159, 159, 0.3);
     }
 }
