--- a/dishes/static/global.css
+++ b/dishes/static/global.css
@@ -1,4 +1,4 @@
-/* Common */
+/* Global */
 
 * {
     -webkit-box-sizing: border-box;
@@ -120,7 +120,7 @@ html, body {
     order: 0;
 }
 
-/* Dropdown Button */
+/* Dropdown */
 .dropbtn {
     width: 100%;
     background-color: #412985;
@@ -130,14 +130,12 @@ html, body {
     border: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
     width: 100%;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     text-align: left;
     width: 175px;
@@ -148,7 +146,6 @@ html, body {
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -156,11 +153,8 @@ html, body {
     display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd;}
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropbtn:hover {background-color: #84bbe2;}
