--- a/dishes/templates/dishes.html
+++ b/dishes/templates/dishes.html
@@ -4,42 +4,83 @@
 
 {% block title %}<title>Calorist — Рецепты</title>{% endblock %}
 
-{% block extra_links %}<link rel='stylesheet' href='{% static "/ingredients.css" %}'>{% endblock %}
+{% block extra_links %}<link rel='stylesheet' href='{% static "/dishes.css" %}'>{% endblock %}
 
 {% block main_content %}
-    <div class='ingredients_table'>
-        <table>
+    {% if not dishes_page %}
+    <div class='dishes_table'>
+        <table border="0">
             <thead>
-                <th width='40%'>Блюдо</th>
-                <th width='15%'>-</th>
-                <th width='15%'>-</th>
-                <th width='15%'>-</th>
-                <th width='15%'>-</th>
+                <th colspan="3">Рецепты не найдены</th>
             </thead>
             <tbody>
-                {% for item in dishes_page %}
-                <tr>
-                    <td>{{ item.name }}</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                {% endfor %}
+                <tr align="left">
+                    <td width="30%">
+                        <img src='{% static "/default_dish_image.png" %}' width="300px">
+                    </td>
+                    <td>
+                        <b>С вашем профилем не связано ни одного рецепта</b>
+                    </td>
+                </tr>            
             </tbody>
         </table>
-    </div>
+    </div> 
+    {% endif %}   
+    {% for item in dishes_page %}
+        <div class='dishes_table'>
+            <table border="0">
+                <thead>
+                    <th colspan="3">
+                        <a href="{% url 'dish' item.pk %}" style="color:white">{{ item.name }}</a>
+                    </th>
+                </thead>
+                <tbody>
+                    <tr align="left">
+                        <td width="30%">
+                            {% if item.dish_image.image %}
+                                <img src='{{ item.dish_image.image.url }}' width="300px">
+                            {% else %}
+                                <img src='{% static "/default_dish_image.png" %}' width="300px">
+                            {% endif %}
+                        </td>
+                        <td>
+                            <p><b>Блюдо:</b> {{ item.name }}</p>
+                            <p><b>Автор:</b> {{ item.created_by }}</p>
+                            <p>
+                                <b>Ингредиенты:</b>
+                                {% for ingredient in item.ingredients.all %}
+                                    {{ ingredient.name }}{% if not forloop.last %}, {% else %}.{% endif %}
+                                {% endfor %}
+                            </p>
+                            <p>
+                                <form method='post'>
+                                {% csrf_token %}
+                                <b>Добавить/Удалить:</b>
+                                {% if item in request.user.dishes.all%}
+                                <button type='submit' value='{{ item.pk }}' name='release_dish_id' formaction='{% url "release_dish" %}'>-</button>
+                                {% else %}
+                                <button type='submit' value='{{ item.pk }}' name='own_dish_id' formaction='{% url "own_dish" %}'>+</button>
+                                {% endif %}
+                                </form>
+                            </p>
+                        </td>
+                    </tr>            
+                </tbody>
+            </table>
+        </div>
+        {% endfor %}
+
     {% if dishes_page.has_previous or dishes_page.has_next %}
     <div class='pagination' style='margin-top: 10px; margin-left: auto; margin-right: auto;'>
         <span class='step-links'>
             {% if dishes_page.has_previous %}
-                <a href='?page=1'>&laquo;</a>
+                <a href='?page=1'>&#10094;&#10094;</a>
                 &nbsp;
-                <a href='?page={{ dishes_page.previous_page_number }}'>&#8249;</a>
+                <a href='?page={{ dishes_page.previous_page_number }}'>&#10094;</a>
             {% else %}
-                &laquo;
+                &#10094;&#10094;
                 &nbsp;
-                &#8249;
+                &#10094;
             {% endif %}
     
             <span class='current_page_str'>
@@ -47,13 +88,13 @@
             </span>
     
             {% if dishes_page.has_next %}
-                <a href='?page={{ dishes_page.next_page_number }}'>&#8250;</a>
+                <a href='?page={{ dishes_page.next_page_number }}'>&#10095;</a>
                 &nbsp;
-                <a href='?page={{ dishes_page.paginator.num_pages }}'>&raquo;</a>
+                <a href='?page={{ dishes_page.paginator.num_pages }}'>&#10095;&#10095;</a>
             {% else %}
-                &#8250;
-                &nbsp;
-                &raquo;
+            &#10095;
+            &nbsp;
+            &#10095;&#10095;
             {% endif %}
         </span>
     </div>
