--- a/dishes/templates/footer.html
+++ b/dishes/templates/footer.html
@@ -1,3 +1,13 @@
+{% load static %}
 <footer class='footer'>
-    <table border='0' style='width: 1280px; margin-left: auto; margin-right: auto;'><tr><td>© 1904 – 2024 ООО «Рога и копыта»</td></tr></table>
+    <div style='vertical-align: bottom;''>
+        <a href='{% url "admin:index" %}'>
+            <img src='{% static "/admin_panel_icon.png" %}' width='20px' height='20px'>
+        </a>
+    </div>
+    <table border='0' style='width: 1280px; margin-left: auto; margin-right: auto;'>
+        <tr>
+            <td>© 1904 – 2024 ООО «Рога и копыта»</td>
+        </tr>
+    </table>
 </footer>
