--- a/dishes/templates/index.html
+++ b/dishes/templates/index.html
@@ -6,21 +6,12 @@
 
 {% block main_content %}
     <div>
-        <table border='0' width='100%'>
-            <tr style='text-align: center;'>
-                <td><img src = '{% static "/index_article.png" %}' width='90%'></td>
+        <table border='0' width='100%' style='text-align: center;'>
+            <tr>
+                <td><h1>Calorist — очередной калькулятор КБЖУ рецептов</h1></td>
             </tr>
             <tr>
-                <td>
-                    <h1>Calorist — очередной калькулятор КБЖУ рецептов</h1>
-                    <p>
-                        Нейросеть тут что-то накалякала, а дальше будет видно. Польза подсчета КБЖУ в блюдах: как это помогает контролировать питание и достигать целей
-                        Здоровое и сбалансированное питание - один из ключевых аспектов здорового образа жизни.
-                        Правильное питание не только дает нам энергию и питательные вещества, но и помогает поддерживать оптимальный вес, 
-                        укреплять иммунитет и предотвращать различные заболевания. Однако, чтобы достичь этих целей, 
-                        важно контролировать потребление калорий и питательных веществ, и здесь на помощь приходит подсчет КБЖУ (калории, белки, жиры и углеводы).
-                    </p>
-                </td>
+                <td><img src = '{% static "/index_article.png" %}' width='80%'></td>
             </tr>
         </table>
     </div>
